[gd_scene load_steps=13 format=3 uid="uid://dreet6mywtew0"]

[ext_resource type="Script" path="res://scripts/bronze.gd" id="1_lgmur"]
[ext_resource type="Texture2D" uid="uid://w6f8edau2eay" path="res://art/items/bronze.png" id="2_6fqaq"]
[ext_resource type="AudioStream" uid="uid://bdddvbvoaitp7" path="res://art/sound/013_Confirm_03.wav" id="3_oogsf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bxjbm"]
atlas = ExtResource("2_6fqaq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq0y4"]
atlas = ExtResource("2_6fqaq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4er02"]
atlas = ExtResource("2_6fqaq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_njbv1"]
atlas = ExtResource("2_6fqaq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqvcn"]
atlas = ExtResource("2_6fqaq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdfd8"]
atlas = ExtResource("2_6fqaq")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_apd5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxjbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq0y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4er02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njbv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqvcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdfd8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5r17t"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iy2dy"]
radius = 1.0

[node name="bronze" type="CharacterBody2D"]
position = Vector2(-3, 3)
script = ExtResource("1_lgmur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.89211, -2.91482)
scale = Vector2(0.513487, 0.510648)
sprite_frames = SubResource("SpriteFrames_apd5t")
autoplay = "default"
frame_progress = 0.726398

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, -3)
shape = SubResource("CircleShape2D_5r17t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -3)
shape = SubResource("CircleShape2D_iy2dy")

[node name="collected" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oogsf")

[node name="coin_timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="coin_timer" to="." method="_on_coin_timer_timeout"]
